--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <audio id="audio" src="audio/audio.mp3"></audio>
 	<div id="ruang-halaman" class="tempat-halaman">
-	    <a href="https://github.com/heryyy" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a>
+	    <a href="https://github.com/iyonnz" target="_blank" class="tombolmelayang"><i class="fab fa-github"></i></a>
 		<div class="halaman halaman-1">
 			<div class="kotak">
 				<h1 class="ml1">
@@ -44,7 +44,7 @@
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">(Namamu)</h1>
+				<h1 class="ml16">Dimas Zaky Dwi Aryatama</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
@@ -77,7 +77,7 @@
 				<h1 class="ml4">
 					<span class="letters letters-1">suka</span>
 					<span class="letters letters-2">sama kamu</span>
-					<span class="letters letters-3">(Nama seseorang yang kamu suka)</span>
+					<span class="letters letters-3">Gatau Siapa KONTOL</span>
 				</h1>
 			</div>
 		</div>
@@ -112,7 +112,7 @@
 		<div class="halaman halaman-11">
 			<div class="kotak">
 				<img src="gambar/bears-hug-love-you.gif" id="gambar" style="display: none;">
-				<h1 class="ml13">(Nama Seseorang yang kamu suka) ❤</h1>
+				<h1 class="ml13">Kanjud ❤</h1>
 			</div>
 		</div>
 	</div>
